--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 fastapi==0.104.1
 flask==2.3.3
 huggingface_hub==0.19.4
-transformers==4.35.2
-torch==2.1.1
-accelerate==0.24.1
 requests==2.31.0
 python-multipart==0.0.6
 pydantic==2.5.0
+vercel-analytics==1.0.0
