fix: use mangum handler for vercel compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
 __pycache__/
 *.pyc
 *.pyo
-*.pyd
-.Python
-env/
-venv/
-.venv
+.python-version
 .env
-.vercel
-*.log
-data/
-embeddings/
-models/
-training_data.json
-feedback_data.csv
-.DS_Store
+.venv
+venv/
