--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "app/api/route.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "app/web/route.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/app/api/route.py"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/app/web/route.py"
+      "dest": "/api/index.py"
     }
   ]
 }
